fix keybindings alignment and remove start work from plus menu

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -555,6 +555,7 @@
 	position: fixed;
 	width: 100%;
 	top: 50%;
+	left: 0;
 	transform: translateY(-50%);
 	z-index: 0;
 }
